# ROBX

./: .env.example  .gitignore  APAGAR_TUDO.sh  CRIAR_NOVO.sh  FRONTEND-FAQ.md  README-SCRIPTS.md  README.md  config.example.yaml  docker-compose.yml  fix-craco.sh  fix-frontend.sh  frontend-diagnosis.sh  install-linux-deps.sh  menu.sh  monitor-frontend.sh  package-lock.json  painel.html  quick-start.sh  requirements-simple.txt  requirements.txt  run-all.sh  run-backend.bat  run-backend.sh  run-frontend-clean.sh  run-frontend-no-craco.sh  run-frontend-with-progress.sh  run-frontend.bat  run-frontend.sh  setup-robust.sh  setup-simple.sh  setup.bat  setup.sh  start.sh  stop-all.sh  test-setup.sh  troubleshoot.sh  update-frontend.sh
backend/: .env.example  Dockerfile  README.md  __init__.py  debug.py  go.mod  main.go  main.py  pyproject.toml  run.py  start.py  test_imports.py
backend/api/: __init__.py  analysis.py  market_data.py  recommendations.py  routes.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/core/: auth.py  security.py
backend/app/routers/: auth.py  signals.py
backend/app/services/: market_data.py  signal_engine.py
backend/internal/config/: config.go
backend/internal/database/: database.go
backend/internal/dto/: dto.go
backend/internal/http/: router.go
backend/internal/middleware/: auth.go
backend/internal/models/: models.go
backend/services/: __init__.py  analysis_service.py  market_service.py  websocket_manager.py
backend/tests/: test_signal_engine.py
frontend/: .env  .eslintrc.cjs  (+4 more)
(+50 files in other folders)
