[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robx-backend"
version = "0.1.0"
description = "API para geração de sinais de negociação para ativos brasileiros"
requires-python = ">=3.10"
authors = [
    { name = "ROBX", email = "contato@example.com" }
]
keywords = ["trading", "fastapi", "signals", "b3", "finance"]

[project.optional-dependencies]
all = [
    "fastapi~=0.114",
    "uvicorn[standard]~=0.30",
    "sqlalchemy~=2.0",
    "pydantic~=2.7",
    "pydantic-settings~=2.2",
    "passlib[bcrypt]~=1.7",
    "python-jose[cryptography]~=3.3",
    "pandas~=2.2",
    "yfinance~=0.2",
    "httpx~=0.27",
    "python-multipart~=0.0.9"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
